# SchemaFlow

./: .gitignore  AtsCache.gs  AuditService_Updated.gs  AuthService.gs  CLAUDE.md  Constants.gs  CryptoService.gs  DELIVERABLES.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MIGRATION_GUIDE.md  MISSING_FILES.md  README.md  SetupHelper.gs  SheetRepository_Updated.gs  ShiftGuardService.gs  ShiftService_Updated.gs  Stylesheet.html  ValidationService.gs  ZWebApp_Updated.gs  index_app.html  index_login.html
backend/: .env.example  CLAUDE.md  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/dependencies/: __init__.py  auth.py  database.py  settings.py
backend/app/api/v1/routes/: health.py  jobs.py  mappings.py  projects.py  schemas.py  transformations.py  uploads.py
backend/app/core/: config.py  exceptions.py  logging.py  middleware.py  security.py
backend/app/db/: supabase_client.py
backend/app/models/requests/: job.py  mapping.py  project.py  schema.py  transformation.py  upload.py
backend/app/models/responses/: error.py  job.py  mapping.py  project.py  schema.py  transformation.py  upload.py
backend/app/services/: job_service.py  project_service.py  upload_service.py
backend/app/workers/: etl_dispatcher.py  job_config.py
backend/tests/: conftest.py
backend/tests/integration/: test_health.py  test_projects.py  test_uploads.py
backend/tests/unit/: test_config.py  test_project_service.py  test_security.py  test_upload_service.py
docs/: api.md  architecture.md  (+5 more)
(+111 files in other folders)
